// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should get warnings from api 1`] = `
[
  {
    "area": {
      "en": "ARCHIPELAGO SEA",
      "fi": "SAARISTOMERI",
      "sv": "SKÄRGÅRDSHAVET",
    },
    "areaId": 254254,
    "dateTime": 1682629200000,
    "description": {
      "en": null,
      "fi": "DVK testaa",
      "sv": null,
    },
    "endDateTime": 1685480400000,
    "equipmentId": null,
    "id": 24303,
    "lineId": null,
    "location": {
      "en": "Hessund-Parainen veneväylä 3545, syvyys: 1,5",
      "fi": "Hessund-Parainen veneväylä 3545, syvyys: 1,5",
      "sv": "Hessund-Parainen veneväylä 3545, syvyys: 1,5",
    },
    "notifier": "DVK",
    "number": 7777,
    "startDateTime": 1682629200000,
    "type": {
      "en": "LOCAL WARNING",
      "fi": "LOCAL WARNING",
      "sv": "LOCAL WARNING",
    },
  },
]
`;

exports[`should get warnings from cache when api call fails 1`] = `
{
  "fetched": 0,
  "marineWarnings": [
    {
      "area": {
        "en": "ARCHIPELAGO SEA",
        "fi": "SAARISTOMERI",
        "sv": "SKÄRGÅRDSHAVET",
      },
      "areaId": 254254,
      "dateTime": 1682629200000,
      "description": {
        "en": null,
        "fi": "DVK testaa",
        "sv": null,
      },
      "endDateTime": 1685480400000,
      "equipmentId": null,
      "id": 24303,
      "lineId": null,
      "location": {
        "en": "Hessund-Parainen veneväylä 3545, syvyys: 1,5",
        "fi": "Hessund-Parainen veneväylä 3545, syvyys: 1,5",
        "sv": "Hessund-Parainen veneväylä 3545, syvyys: 1,5",
      },
      "notifier": "DVK",
      "number": 7777,
      "startDateTime": 1682629200000,
      "type": {
        "en": "LOCAL WARNING",
        "fi": "LOCAL WARNING",
        "sv": "LOCAL WARNING",
      },
    },
  ],
}
`;
